@@ -1,12 +1,12 @@
 /********************************************************************************************
  *
  * Module.java
- * 
+ *
  * Created on 	Nov 22, 2003
  *
  * @author 		Doug
  * @version
- * 
+ *
  * Developed by ThreePenny Software <a href="http://www.threepenny.net">www.threepenny.net</a>
  ********************************************************************************************/
 package edu.umich.soar.debugger.doc;
@@ -15,24 +15,24 @@ import edu.umich.soar.debugger.general.Debug;
 import edu.umich.soar.debugger.modules.AbstractView;
 
 /********************************************************************************************
- * 
+ *
  * Instances of this class represent modules (types of windows) that can be
  * created in the debugger.
- * 
+ *
  * So for example, a the TraceView class might be recorded in an instance of
  * this class.
- * 
+ *
  ********************************************************************************************/
 public class Module
 {
     /** The name shown to the user for this class */
-    private String m_Name;
+    private final String m_Name;
 
     /** A description shown to the user for this class */
-    private String m_Description;
+    private final String m_Description;
 
     /** The class itself */
-    private Class<? extends AbstractView> m_Class;
+    private final Class<? extends AbstractView> m_Class;
 
     public Module(String name, String description,
             Class<? extends AbstractView> c)
@@ -64,8 +64,7 @@ public class Module
         try
         {
             // Construct the new object
-            AbstractView window = (AbstractView) m_Class.newInstance();
-            return window;
+            return m_Class.getDeclaredConstructor().newInstance();
         }
         catch (Exception e)
         {
